Remove keycloak and devhub

--- a/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
@@ -2,8 +2,9 @@ namespace: openshift-gitops
 
 resources:
   - cluster-services-project.yaml
-  - ../../../cluster-services/keycloak/instance
-  - ../../../cluster-services/redhat-developer-hub/instance
+  # Remove Keycloak and Dev Hub until Cruchy is in 4.20
+  # - ../../../cluster-services/keycloak/instance
+  # - ../../../cluster-services/redhat-developer-hub/instance
   - ../../../cluster-services/devspaces/instance
   - ../../../cluster-services/openshift-virt/instance
   - ../../../cluster-services/openshift-lightspeed/instance
