--- a/gitops/cluster-config/openshift-gitops/instances/cluster/argocd.yaml
+++ b/gitops/cluster-config/openshift-gitops/instances/cluster/argocd.yaml
@@ -44,3 +44,13 @@ spec:
       g, openshift-gitops-admins, role:admin
       g, system:cluster-admins, role:admin
     scopes: "[groups]"
+  controller:
+    processors: {}
+    resources:
+      limits:
+        cpu: '2'
+        memory: 4Gi
+      requests:
+        cpu: 250m
+        memory: 2Gi
+    sharding: {}
