Update NFD config with og

--- a/gitops/rhacm/policies/prime/node-feature-discovery-operator/node-feature-discovery-operator-policy.yaml
+++ b/gitops/rhacm/policies/prime/node-feature-discovery-operator/node-feature-discovery-operator-policy.yaml
@@ -45,6 +45,11 @@ spec:
             sourceNamespace: openshift-marketplace
           versions:
             - nfd.4.20.0-202511102026
+          operatorGroup:
+            name: nfd-og
+            namespace: openshift-nfd
+            targetNamespaces:
+              - openshift-nfd
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
         kind: ConfigurationPolicy
