--- a/gitops/rhacm/policies/prime/kustomization.yaml
+++ b/gitops/rhacm/policies/prime/kustomization.yaml
@@ -13,4 +13,4 @@ resources:
   - openshift-virtualization
   - kubeletconfig
   - rhacs-central
-  - node-feature-discovery-operator
+  # - node-feature-discovery-operator
