Update open-vsx url

--- a/gitops/cluster-services/devspaces/instance/checluster.yaml
+++ b/gitops/cluster-services/devspaces/instance/checluster.yaml
@@ -13,6 +13,8 @@ spec:
       logLevel: ERROR
     metrics:
       enable: true
+    pluginRegistry:
+      openVSXURL: https://open-vsx.org
   containerRegistry: {}
   devEnvironments:
     startTimeoutSeconds: 300
