--- a/gitops/cluster-services/devspaces/instance/checluster.yaml
+++ b/gitops/cluster-services/devspaces/instance/checluster.yaml
@@ -14,7 +14,7 @@ spec:
     metrics:
       enable: true
     pluginRegistry:
-      openVSXURL: https://open-vsx.org
+      openVSXURL: 'https://open-vsx.org'
   containerRegistry: {}
   devEnvironments:
     startTimeoutSeconds: 300
