--- a/gitops/cluster-services/keycloak/instance/kustomization.yaml
+++ b/gitops/cluster-services/keycloak/instance/kustomization.yaml
@@ -1,12 +1,16 @@
 namespace: keycloak
 
 resources:
+  - postgres-pvc.yaml
   - keycloak-certificate.yaml
-  # - keycloak-db-externalsecret.yaml
+  - keycloak-db-externalsecret.yaml
   # - keycloak-db-pguser-externalsecret.yaml
-  - crunchy-postgres-instance.yaml
-  # - postgresql-pvc.yaml
-  # - postgresql-statefulset.yaml
+
+  # Crunchy not yet available in 4.20... remove for a standard container for now.
+  #- crunchy-postgres-instance.yaml
+
+  - postgres-pvc.yaml
+  - postgres-ss.yaml
   # - postgresql-svc.yaml
   - keycloak.yaml
   - consolelink.yaml
