--- a/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
@@ -3,7 +3,7 @@ namespace: openshift-gitops
 resources:
   - cluster-services-project.yaml
   # Remove Keycloak and Dev Hub until Cruchy is in 4.20
-  # - ../../../cluster-services/keycloak/instance
+  - ../../../cluster-services/keycloak/instance
   # - ../../../cluster-services/redhat-developer-hub/instance
   - ../../../cluster-services/devspaces/instance
   - ../../../cluster-services/openshift-virt/instance
