Update external secret

--- a/gitops/cluster-services/keycloak/instance/keycloak-db-externalsecret.yaml
+++ b/gitops/cluster-services/keycloak/instance/keycloak-db-externalsecret.yaml
@@ -17,6 +17,8 @@ spec:
           postgres-operator.crunchydata.com/pguser: "{{ .keycloakDbUser | toString }}"
       type: Opaque
       data:
+        POSTGRES_USER: "{{ .keycloakDbUser | toString }}"
+        POSTGRES_PASSWORD: "{{ .keycloakDbPassword | toString }}"
         POSTGRESQL_USER: "{{ .keycloakDbUser | toString }}"
         POSTGRESQL_PASSWORD: "{{ .keycloakDbPassword | toString }}"
         password: "{{ .keycloakDbPassword | toString }}"
