Trying to fix this.

--- a/gitops/cluster-services/keycloak/instance/keycloak-db-externalsecret.yaml
+++ b/gitops/cluster-services/keycloak/instance/keycloak-db-externalsecret.yaml
@@ -14,19 +14,19 @@ spec:
       metadata:
         labels:
           postgres-operator.crunchydata.com/cluster: keycloak-db
-          postgres-operator.crunchydata.com/pguser: "{{ .keycloakDbUser | toString }}"
+          # postgres-operator.crunchydata.com/pguser: "{{ .keycloakDbUser | toString }}"
       type: Opaque
       data:
-        POSTGRES_USER: "{{ .keycloakDbUser | toString }}"
+        # POSTGRES_USER: "{{ .keycloakDbUser | toString }}"
         POSTGRES_PASSWORD: "{{ .keycloakDbPassword | toString }}"
-        POSTGRESQL_USER: "{{ .keycloakDbUser | toString }}"
+        # POSTGRESQL_USER: "{{ .keycloakDbUser | toString }}"
         POSTGRESQL_PASSWORD: "{{ .keycloakDbPassword | toString }}"
         password: "{{ .keycloakDbPassword | toString }}"
     creationPolicy: Owner
   data:
-    - secretKey: keycloakDbUser
-      remoteRef:
-        key: KEYCLOAK_DB_USER
+    # - secretKey: keycloakDbUser
+    #   remoteRef:
+    #     key: KEYCLOAK_DB_USER
     - secretKey: keycloakDbPassword
       remoteRef:
         key: KEYCLOAK_DB_PASSWORD
