--- a/gitops/cluster-services/keycloak/instance/keycloak.yaml
+++ b/gitops/cluster-services/keycloak/instance/keycloak.yaml
@@ -8,7 +8,7 @@ spec:
   instances: 1
   db:
     vendor: postgres
-    host: keycloak-db-primary.keycloak.svc
+    host: postgres-db.keycloak.svc
     usernameSecret:
       name: keycloak-creds
       key: POSTGRESQL_USER
