--- a/gitops/cluster-services/keycloak/instance/kustomization.yaml
+++ b/gitops/cluster-services/keycloak/instance/kustomization.yaml
@@ -9,6 +9,6 @@ resources:
   # Crunchy not yet available in 4.20... remove for a standard container for now.
   - crunchy-postgres-instance.yaml
   #- postgres-ss.yaml
-  - postgresql-svc.yaml
+  #- postgresql-svc.yaml
   - keycloak.yaml
   - consolelink.yaml
