--- a/gitops/cluster-services/keycloak/instance/kustomization.yaml
+++ b/gitops/cluster-services/keycloak/instance/kustomization.yaml
@@ -1,7 +1,7 @@
 namespace: keycloak
 
 resources:
-  - postgres-pvc.yaml
+  # - postgres-pvc.yaml
   - keycloak-certificate.yaml
   # - keycloak-db-externalsecret.yaml
   # - keycloak-db-pguser-externalsecret.yaml
