--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
@@ -18,6 +18,7 @@ spec:
         - name: sso-secrets
         - name: gitops-dev-secrets
         - name: gitops-prod-secrets
+        - name: github-secrets
       envs:
         # Only needed because gitea uses a self-signed cert.
         # Can be removed once OCP API gets a good cert.
