--- a/gitops/argocd/rhacm/policies/prime-policies-application.yaml
+++ b/gitops/argocd/rhacm/policies/prime-policies-application.yaml
@@ -16,15 +16,15 @@ spec:
     path: gitops/rhacm/policies/prime
     repoURL: https://github.com/pittar/homelab.git
     targetRevision: main
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - ApplyOutOfSyncOnly=true
-    retry:
-      limit: 5 # number of failed sync attempt retries; unlimited number of attempts if less than 0
-      backoff:
-        duration: 5s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
-        factor: 2 # a factor to multiply the base duration after each failed retry
-        maxDuration: 10m # the maximum amount of time allowed for the backoff strategy
+  # syncPolicy:
+  #   automated:
+  #     prune: true
+  #     selfHeal: true
+  #   syncOptions:
+  #     - ApplyOutOfSyncOnly=true
+  #   retry:
+  #     limit: 5 # number of failed sync attempt retries; unlimited number of attempts if less than 0
+  #     backoff:
+  #       duration: 5s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
+  #       factor: 2 # a factor to multiply the base duration after each failed retry
+  #       maxDuration: 10m # the maximum amount of time allowed for the backoff strategy
